--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,4 @@ serde = { version= " 1.0.117", features = ["derive"] }
 serde_json = "1.0.59"
 rand = "0.7.3"
 rand_distr = "0.3.0"
-
+either = "1.6.1"
