--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,8 @@ serde_json = "1.0.59"
 rand = "0.7.3"
 rand_distr = "0.3.0"
 either = "1.6.1"
+r2d2 = "0.8.9"
+diesel = { version = "1.4.5", features = ["postgres", "r2d2"]}
+diesel_migrations = "1.4.0"
+dotenv = "0.15.0"
+lazy_static = "1.4.0"
